--- a/style.css
+++ b/style.css
@@ -143,14 +143,14 @@ input:checked + .slider:before {
 
 /* Mode Dark */
 
-/* .darkMode {
+body.darkMode {
   background-color: #141d26;
 }
 
-.containerDark {
+body.darkMode .container {
   background-color: #243447;
   color: #fff;
   box-shadow: 5px 13px 20px 16px rgba(21, 31, 41, 0.7);
   -webkit-box-shadow: 5px 13px 20px 16px rgba(21, 31, 41, 0.7);
   -moz-box-shadow: 5px 13px 20px 16px rgba(21, 31, 41, 0.7);
-} */
+}
